it's called legacy code for a reason/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cobol-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cobol-app
  template:
    metadata:
      labels:
        app: cobol-app
    spec:
      containers:
        - name: cobol-app
          image: lynaten/cobol-app:latest
          ports:
            - containerPort: 8000
          args: []
