it's called legacy code for a reason/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobol-app-service
spec:
  type: ClusterIP
  selector:
    app: cobol-app
  ports:
    - port: 8000
      targetPort: 8000
