it's called legacy code for a reason/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cobol-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: cobol.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cobol-app-service
                port:
                  number: 8000
